Sync from next & Kotlin 1.5.0