@@ -26,7 +26,7 @@ fun Project.configureJvm() {
 	project.korge.addDependency("jvmTestImplementation", "org.jetbrains.kotlin:kotlin-test")
 	project.korge.addDependency("jvmTestImplementation", "org.jetbrains.kotlin:kotlin-test-junit")
 
-    project.tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile::class.java).all {
+	project.tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile::class.java).all {
         it.kotlinOptions {
             this.jvmTarget = korge.jvmTarget
         }
@@ -80,16 +80,7 @@ open class KorgeJavaExec : JavaExec() {
         korgeClassPathGet
     }
 
-    @get:Input
-    val useZgc get() = ((System.getenv("JVM_USE_ZGC") == "true") || (javaVersion.majorVersion.toIntOrNull() ?: 8) >= 14) && (System.getenv("JVM_USE_ZGC") != "false")
-
     override fun exec() {
-        if (useZgc) {
-            println("Using ZGC")
-        }
-        if (useZgc) {
-            jvmArgs("-XX:+UnlockExperimentalVMOptions", "-XX:+UseZGC")
-        }
         classpath = korgeClassPath
         for (classPath in korgeClassPath.toList()) {
             project.logger.info("- $classPath")
